c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/switch.c
// very simple test of switch statements
int main(void) {
    switch(3) {
        case 0: return 0;
        case 1: return 1;
        case 3: return 3;
        case 5: return 5;
    }
}