c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/switch_missing_paren.c
int main(void) {
    switch 3 {
        case 3: return 0;
    }
}